metadata-classic/objects/HCConfigResourceItem__c.object
<CustomObject>
    <description>Object used to store configuration records for help center resource elements or items (e.g., playlists)</description>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>The ID of the external system reference (e.g., youtube playlist ID)</description>
        <externalId>true</externalId>
        <inlineHelpText>The ID of the external system reference (e.g., youtube playlist ID)</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the associated resource record.</description>
        <label>Resource</label>
        <referenceTo>HCConfigResource__c</referenceTo>
        <relationshipLabel>Resource Items</relationshipLabel>
        <relationshipName>HCConfigResourceItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>The order in which the item appears on the help center resource.</description>
        <label>Sort Order</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The publication status of the resource item.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HC Config: Resource Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HC Config: Resource Items</pluralLabel>
    <recordTypes>
        <fullName>Playlist</fullName>
        <active>true</active>
        <description>Record type used to manage the resource item playlists.</description>
        <label>Playlist</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>